fix wapbl_discard() to actually discard the queued bufs properly - need to set BC_INVAL for them, and also need to explicitly remove them from the BQ_LOCKED queue

fixes DIAGNOSTIC panic when force unmounting unresponsive disk device
PR kern/51178 by Michael van Elst